<resources>
    <string name="app_name">Resources my Devices</string>
    <string name="tvVersionAndroidLB">1. Versión Android:</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvLight">2. Flashlight:</string>
    <string name="btnOn">ON</string>
    <string name="btnOff">OFF</string>
    <string name="tvLevelBaterryLB">3. Level of Baterry</string>
    <string name="tvLevelBaterry_2"></string>
    <string name="tvStorageLB">4. Storage</string>
    <string name="etNameFile">Name of File</string>
    <string name="btnSaveFile">Save</string>
    <string name="tvState">5. Conection</string>
    <string name="tvBlu">6. Bluetooth</string>
</resources>