<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Resources_my_Devices"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="408dp"
        android:layout_height="28dp"
        android:text="@string/tvVersionAndroidLB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="411dp"
        android:layout_height="29dp"
        android:text="@string/tvVersionAndroid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVersionAndroidLB" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="408dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/tvLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVersionAndroid" />

    <Button
        android:id="@+id/btnOn"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:text="@string/btnOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLight" />

    <Button
        android:id="@+id/btnOn2"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:text="@string/btnOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBluetooth" />

    <Button
        android:id="@+id/btnOff"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:text="@string/btnOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/btnOn"
        app:layout_constraintTop_toBottomOf="@+id/tvLight" />

    <Button
        android:id="@+id/btnOff2"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:text="@string/btnOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnOn"
        app:layout_constraintTop_toBottomOf="@+id/tvBluetooth" />

    <TextView
        android:id="@+id/tvLevelBaterryLB"
        android:layout_width="409dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/tvLevelBaterryLB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOn" />

    <ProgressBar
        android:id="@+id/pbLevelBatery"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="411dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLevelBaterryLB" />

    <TextView
        android:id="@+id/tvStorageLB"
        android:layout_width="409dp"
        android:layout_height="29dp"
        android:text="@string/tvStorageLB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbLevelBatery" />

    <EditText
        android:id="@+id/etNameFile"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etNameFile"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStorageLB" />

    <ImageButton
        android:id="@+id/btnSaveFile"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:contentDescription="@string/btnSaveFile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameFile"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvConectionLB"
        android:layout_width="412dp"
        android:layout_height="28dp"
        android:text="@string/tvState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveFile" />

    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="412dp"
        android:layout_height="28dp"
        android:text="@string/tvBlu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConexion" />

    <TextView
        android:id="@+id/tvConexion"
        android:layout_width="413dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConectionLB" />

</androidx.constraintlayout.widget.ConstraintLayout>